--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 VITE_APP_NAME='Countries Table'
+VITE_APP_LOGO='https://static.vecteezy.com/system/resources/previews/009/314/440/original/earth-globe-clip-art-vector-illustration-isolated-free-png.png'
